--- a/app/src/main/res/layout/activity_simulation_recyler_view_with_filter.xml
+++ b/app/src/main/res/layout/activity_simulation_recyler_view_with_filter.xml
@@ -10,4 +10,11 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.affixus.base.activity.SimulationRecylerViewWithFilter">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvSimulation1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </android.support.v7.widget.RecyclerView>
+
 </RelativeLayout>
