--- a/app/src/main/res/layout/activity_simulation_recyler_view_with_filter.xml
+++ b/app/src/main/res/layout/activity_simulation_recyler_view_with_filter.xml
@@ -1,20 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_simulation_recyler_view_with_filter"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.affixus.base.activity.SimulationRecylerViewWithFilter">
 
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:height="50dp"
+        android:text="Name"
+        android:ems="10"
+        android:id="@+id/etSearch"
+        />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvSimulation1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
     </android.support.v7.widget.RecyclerView>
 
-</RelativeLayout>
+
+</LinearLayout>
