search simulation start

--- a/app/src/main/res/layout/activity_simulation_recyler_view_with_filter.xml
+++ b/app/src/main/res/layout/activity_simulation_recyler_view_with_filter.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:height="50dp"
-        android:text="Name"
+        android:hint="Search text..."
         android:ems="10"
         android:id="@+id/etSearch"
         />
