--- a/app/src/main/res/layout/activity_simulation_recyler_view_with_filter.xml
+++ b/app/src/main/res/layout/activity_simulation_recyler_view_with_filter.xml
@@ -6,10 +6,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.affixus.base.activity.SimulationRecylerViewWithFilter">
+
+
+    <include
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        layout="@layout/toolbar" />
 
     <EditText
         android:layout_width="match_parent"
